header buttons: fixed flickering bug, show/hide via flag

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -135,3 +135,10 @@ ion-side-menu .item, ion-side-menu .item-content {
     border: none;
     padding-left:20px;
 }
+
+[nav-bar-transition="ios"] .buttons{
+    -moz-transition: none;
+    -webkit-transition: none;
+    -o-transition: color 0 ease-in;
+    transition: none;
+}
